SERVER-17388/SERVER-16776 If closing unopened file, do not check for journal writes